// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amp-video VIDEO only attributes must remain 1`] = `
<body>
  <video
    controls=""
    height="360"
    playsinline=""
    poster="images/kitten-playing.png"
    width="640"
  >
    <source
      src="videos/kitten-playing.webm"
      type="video/webm"
    />
    <source
      src="videos/kitten-playing.mp4"
      type="video/mp4"
    />
    <div
      fallback=""
    >
      <p>
        This browser does not support the video element.
      </p>
    </div>
  </video>
</body>
`;

exports[`amp-video adds script element to head when rendering with <amp-boilerplate> 1`] = `
<body>
  <amp-video
    controls=""
    height="360"
    layout="responsive"
    poster="images/kitten-playing.png"
    width="640"
  >
    <source
      src="videos/kitten-playing.webm"
      type="video/webm"
    />
    <source
      src="videos/kitten-playing.mp4"
      type="video/mp4"
    />
    <div
      fallback=""
    >
      <p>
        This browser does not support the video element.
      </p>
    </div>
  </amp-video>
</body>
`;
